--- a/com/jarjune/jdalao-framework-util/1.0.1/m2e-lastUpdated.properties
+++ b/com/jarjune/jdalao-framework-util/1.0.1/m2e-lastUpdated.properties
@@ -1,5 +1,9 @@
-#Thu Jul 11 15:08:56 CST 2019
+#Thu Jul 11 15:11:54 CST 2019
+public|http\://maven.aliyun.com/nexus/content/groups/public/|javadoc=1562829114195
 public|http\://maven.aliyun.com/nexus/content/groups/public/|sources=1562828936851
-wish-repo|https\://gitee.com/jarjune/30mvn/raw/master|sources=1562828936851
+wish-repo|https\://gitee.com/jarjune/30mvn/raw/master|javadoc=1562829114195
+Jdalao-repo|https\://raw.github.com/jarjune/Jdalao-mvn/master|javadoc=1562829114195
 Jdalao-repo|https\://raw.github.com/jarjune/Jdalao-mvn/master|sources=1562828936851
+wish-repo|https\://gitee.com/jarjune/30mvn/raw/master|sources=1562828936851
+central|https\://repo.maven.apache.org/maven2|javadoc=1562829114195
 central|https\://repo.maven.apache.org/maven2|sources=1562828936851
